# football-api-service/api/swagger/swagger.yaml
@@ -1,16 +1,15 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
-  title: Hello World App
+  version: "0.1.0"
+  title: Football
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /api/v1
 # 
 schemes:
   # tip: remove http to make production-grade
   - http
-  - https
 # format of bodies a client can send (Content-Type)
 consumes:
   - application/json
@@ -18,17 +17,18 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
+
+  /events:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+    x-swagger-router-controller: event-controller
     get:
-      description: Returns 'Hello' to the caller
+      description: Returns list of city events
       # used as the method name of the controller
-      operationId: hello
+      operationId: events
       parameters:
-        - name: name
+        - name: date
           in: query
-          description: The name of the person to whom to say hello
+          description: filtering date
           required: false
           type: string
       responses:
@@ -36,22 +36,129 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/EventsResponse"
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /games:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: game-controller
+    get:
+      description: Returns list of football matches
+      # used as the method name of the controller
+      operationId: games
+      parameters:
+        - name: date
+          in: query
+          description: Filtering date
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/GameResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+  /shop:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: shop-controller
+    get:
+      description: Returns list of products
+      # used as the method name of the controller
+      operationId: shop
+      parameters:
+        - name: date
+          in: query
+          description: Filtering date
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/ShopResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
+
+  EventsResponse:
+      type: array
+      items:
+        $ref: "#/definitions/Events"
+  GameResponse:
+      type: array
+      items:
+        $ref: "#/definitions/Game"
+  ShopResponse:
+      type: array
+      items:
+        $ref: "#/definitions/Shop"
+  
+  Events:
     required:
-      - message
+      - name
     properties:
-      message:
+      name:
         type: string
+      group:
+        type: string
+      image:
+        type: string
+      date:
+        type: string       
+      location:
+        type: string
+      duration:
+        type: string
+      score:
+        type: string
+        
+  Game:
+    required:
+      - team1
+      - team2
+    properties:
+      team1:
+        type: string
+      team2:
+        type: string
+      date:
+        type: string
+      location:
+        type: string
+      
+      
+  Shop:
+    required:
+      - name
+    properties:
+      name:
+        type: string
+      image: 
+        type: string
+      price:
+        type: string
+      
+      
+      
+      
+      
   ErrorResponse:
     required:
       - message
